pushon of align feature fix

--- a/css/style-main.css
+++ b/css/style-main.css
@@ -183,11 +183,15 @@ footer .logo {
   z-index: 10;
 }
 
-.about-us-modal h2,
-h3 {
+.about-us-modal h2, h3 {
   text-align: center;
   margin-bottom: 10px;
   text-transform: capitalize;
+}
+
+.our-story {
+  margin-top: 10px;
+  font-size: 1.5rem;
 }
 
 .portfolios-container img {
@@ -299,7 +303,7 @@ h3 {
   padding: 10px;
   transform-origin: top center;
   transform: scale(0);
-  transition: transform 0.7s ease-out;
+  transition: transform 0.5s ease-out;
   z-index: 10;
 }
 
